--- a/index.html
+++ b/index.html
@@ -20,10 +20,7 @@
     <meta property="twitter:domain" content="powerlanguage.co.uk">
 
     <meta name="theme-color" content="#6aaa64" />
-    <link rel="manifest" href="manifest.json" />
-    <link href="images/wordle_logo_32x32.png" rel="icon shortcut" sizes="3232" />
-    <link href="images/wordle_logo_192x192.png" rel="apple-touch-icon" />
-
+    <link href="dp-light.css" rel="stylesheet">
     <style>
       /* Global Styles & Colors */
       :root {
@@ -127,6 +124,7 @@
         window.wordle.hash = 'e65ce0a5';
       })();
     </script>
+    <script defer src="datepicker.js"></script>
     <script src="main.e65ce0a5.js"></script>
     <game-app></game-app>
   </body>
