--- a/www/index.html
+++ b/www/index.html
@@ -125,7 +125,7 @@
       })();
     </script>
     <script defer src="datepicker.js"></script>
-    <script src="main.e65ce0a5.js"></script>
+    <script src="main.js"></script>
     <game-app></game-app>
   </body>
 </html>
