--- a/index.html
+++ b/index.html
@@ -1,26 +1,14 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
 
-    <title>Wordle - A daily word game</title>
+    <title>Word All - A daily word game</title>
     <meta name="description" content="Guess the hidden word in 6 tries. A new puzzle is available each day.">
 
-    <!-- FB Meta Tags -->
-    <meta property="og:url" content="https://www.powerlanguage.co.uk/wordle/">
-    <meta property="og:type" content="website">
-    <meta property="og:title" content="Wordle - A daily word game">
-    <meta property="og:description" content="Guess the hidden word in 6 tries. A new puzzle is available each day.">
-    <meta property="og:image" content="https://www.dailywordle.com/images/wordle_og_1200x630.png">
-
-    <!-- Twitter Meta Tags -->
-    <meta name="twitter:card" content="summary_large_image">
-    <meta property="twitter:domain" content="powerlanguage.co.uk">
-
     <meta name="theme-color" content="#6aaa64" />
-    <link href="dp-light.css" rel="stylesheet">
+    <link href="public/dp-light.css" rel="stylesheet">
     <style>
       /* Global Styles & Colors */
       :root {
@@ -124,8 +112,8 @@
         window.wordle.hash = 'e65ce0a5';
       })();
     </script>
-    <script defer src="datepicker.js"></script>
-    <script src="main.js"></script>
+    <script defer src="public/datepicker.js"></script>
+    <script src="public/main.js"></script>
     <game-app></game-app>
   </body>
 </html>
