--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
       })();
     </script>
     <script defer src="public/datepicker.js"></script>
-    <script src="public/main.js"></script>
+    <script src="public/main.js?1"></script>
     <game-app></game-app>
   </body>
 </html>
